[FIX] Theme 테이블 삭제에 따라서 일부 수정, Theme 테이블 있는 ERD버전이 필요하면 앞으로