@@ -1,13 +1,13 @@
 package com.CafeHub.Manage.cafe.service;
 
 import com.CafeHub.Manage.cafe.entity.Cafe;
+import com.CafeHub.Manage.cafe.entity.Theme;
 import com.CafeHub.Manage.cafe.repository.CafeRepository;
 import com.CafeHub.Manage.cafe.request.*;
 import com.CafeHub.Manage.cafe.response.AllCafeGetResponse;
 import com.CafeHub.Manage.cafe.response.CafeInfoResponse;
 import com.CafeHub.Manage.cafe.response.CafeResponse;
 import com.CafeHub.Manage.s3.S3Manager;
-import com.CafeHub.Manage.theme.repository.ThemeRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -28,10 +28,7 @@ public class CafeServiceImpl implements CafeService{
 
     private final CafeRepository cafeRepository;
 
-    private final ThemeRepository themeRepository;
-
     private final S3Manager s3Manager;
-
 
 
     @Override
@@ -43,8 +40,8 @@ public class CafeServiceImpl implements CafeService{
         Page<Cafe> cafes = cafeRepository.findAll(pageable);
 
         List<CafeResponse> cafeList = cafes.stream()
-                .map(cafe -> new CafeResponse(cafe.getId(), cafe.getName(), cafe.getTheme().getName()))
-                .collect(Collectors.toList());
+                .map(cafe -> new CafeResponse(cafe.getId(), cafe.getName(), cafe.getTheme()))
+                .toList();
 
         return new AllCafeGetResponse(
                 cafeList,
@@ -58,7 +55,6 @@ public class CafeServiceImpl implements CafeService{
 
 
 
-    // 여기서 map은 자료구조가 아니라 Optional의 메소드임 Optional안에 값이 있는 경우만 실행됨
     @Override
     public CafeInfoResponse getCafeInfo(CafeInfoRequest request) {
         return cafeRepository.findById(request.getCafeId())
@@ -66,16 +62,17 @@ public class CafeServiceImpl implements CafeService{
                         cafe.getId(),
                         cafe.getName(),
                         cafe.getAddress(),
-                        cafe.getCafePhotoUrl(),
+                        cafe.getPhotoUrl(),
                         cafe.getPhone(),
                         cafe.getRating(),
-                        cafe.getReviewCount(),
+                        cafe.getReviewCnt(),
                         cafe.getOperationHours(),
-                        cafe.getClosedDays(),
+                        cafe.getCloseDays(),
                         cafe.getTheme()
                 ))
                 .orElseThrow(() -> new RuntimeException("에러처리는 나중에 해당 카페id로 카페 정보를 찾을 수 없음: " + request.getCafeId()));
     }
+
 
     // 일단 단순 업로드만 가능
     @Override
@@ -87,13 +84,13 @@ public class CafeServiceImpl implements CafeService{
         Cafe cafe = Cafe.builder()
                 .name(request.getName())
                 .address(request.getAddress())
-                .cafePhotoUrl(cafePhotoUrl)
+                .photoUrl(cafePhotoUrl)
                 .phone(request.getPhone())
-                .rating(BigDecimal.valueOf(0))
-                .reviewCount(0)
+                .rating((double)0)
+                .reviewCnt(0)
                 .operationHours(request.getOperationHours())
-                .closedDays(request.getClosedDays())
-                .theme(themeRepository.findById(request.getThemeId()).get())
+                .closeDays(request.getClosedDays())
+                .theme(Theme.valueOf(request.getTheme()))
                 .build();
 
         cafeRepository.save(cafe);
@@ -113,13 +110,13 @@ public class CafeServiceImpl implements CafeService{
                 .id(request.getCafeId())
                 .name(request.getName())
                 .address(request.getAddress())
-                .cafePhotoUrl(request.getCafePhotoUrl())
+                .photoUrl(request.getCafePhotoUrl())
                 .phone(request.getPhone())
                 .rating(prev.getRating())
-                .reviewCount(prev.getReviewCount())
+                .reviewCnt(prev.getReviewCnt())
                 .operationHours(request.getOperationHours())
-                .closedDays(request.getClosedDays())
-                .theme(themeRepository.findById(request.getThemeId()).get())
+                .closeDays(request.getClosedDays())
+                .theme(Theme.valueOf(request.getTheme()))
                 .build();
 
         cafeRepository.save(cafe);
